<resources>
    <string name="app_name">PesoPal</string>
    <string name="slogan">Know Where Your Money Goes</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotpw">Forgot password?</string>
    <string name="donthaveanacc">Don\'t have an account?</string>
    <string name="register">Register here</string>
</resources>